[tool.poetry]
name = "chatbot"
version = "1.1"
description = "ChatBot with conversational History"
authors = ["Muhammad Awais"]
license = "MA-1.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
